Fix alignment for graphic header Fix clamp for BottomSheet h2

--- a/packages/bpk-component-bottom-sheet/src/BpkBottomSheet.module.scss
+++ b/packages/bpk-component-bottom-sheet/src/BpkBottomSheet.module.scss
@@ -99,11 +99,8 @@ $close-button-width: tokens.bpk-spacing-lg() * 2;
     }
   }
 
-  &--title {
-    text-align: center;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  &--action {
+    padding-inline-start: tokens.bpk-spacing-lg();
   }
 
   &--content {
